--- a/QtCreator/mainWindow.ui
+++ b/QtCreator/mainWindow.ui
@@ -85,6 +85,9 @@
              <property name="currentIndex">
               <number>0</number>
              </property>
+             <property name="tabsClosable">
+              <bool>true</bool>
+             </property>
              <widget class="QWidget" name="tab_3">
               <attribute name="title">
                <string>1</string>
@@ -95,25 +98,7 @@
               <attribute name="title">
                <string>2</string>
               </attribute>
-              <layout class="QVBoxLayout" name="verticalLayout_5">
-               <item>
-                <widget class="QLineEdit" name="txt_alg1_2">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QPushButton" name="btn_alg1_2">
-                 <property name="text">
-                  <string>Select Classifier....</string>
-                 </property>
-                </widget>
-               </item>
-              </layout>
+              <layout class="QVBoxLayout" name="verticalLayout_5"/>
              </widget>
             </widget>
            </item>
@@ -147,7 +132,7 @@
                </size>
               </property>
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <widget class="QWidget" name="tab">
                <attribute name="title">
@@ -369,7 +354,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>231</x>
-     <y>255</y>
+     <y>304</y>
     </hint>
     <hint type="destinationlabel">
      <x>288</x>
@@ -409,6 +394,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>tab_classifiers</sender>
+   <signal>tabCloseRequested(int)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>on_tab_close_requested()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>111</x>
+     <y>347</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>7</x>
+     <y>325</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>btn_dataset_clicked()</slot>
@@ -418,5 +419,6 @@
   <slot>btn_run_clicked()</slot>
   <slot>on_actionAlgorithm()</slot>
   <slot>on_actionQuit()</slot>
+  <slot>on_tab_close_requested()</slot>
  </slots>
 </ui>
