--- a/QtCreator/datasetWindow.ui
+++ b/QtCreator/datasetWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1126</width>
-    <height>579</height>
+    <height>631</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -161,6 +161,30 @@
          </item>
          <item>
           <widget class="Line" name="line_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_5">
+           <property name="text">
+            <string>Attack Categories ( Optional )</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="txt_attacks"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_attacks">
+           <property name="text">
+            <string>Select Attack Categories...</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="Line" name="line_7">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
@@ -562,8 +586,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>325</x>
-     <y>569</y>
+     <x>334</x>
+     <y>621</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
@@ -674,8 +698,8 @@
    <slot>move_label()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>588</x>
-     <y>273</y>
+     <x>593</x>
+     <y>306</y>
     </hint>
     <hint type="destinationlabel">
      <x>488</x>
@@ -690,8 +714,8 @@
    <slot>move_label()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>579</x>
-     <y>300</y>
+     <x>593</x>
+     <y>335</y>
     </hint>
     <hint type="destinationlabel">
      <x>535</x>
@@ -706,8 +730,8 @@
    <slot>move_label()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>846</x>
-     <y>266</y>
+     <x>867</x>
+     <y>306</y>
     </hint>
     <hint type="destinationlabel">
      <x>782</x>
@@ -722,8 +746,8 @@
    <slot>move_label()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>859</x>
-     <y>303</y>
+     <x>867</x>
+     <y>335</y>
     </hint>
     <hint type="destinationlabel">
      <x>853</x>
@@ -738,8 +762,8 @@
    <slot>on_accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1072</x>
-     <y>564</y>
+     <x>1081</x>
+     <y>621</y>
     </hint>
     <hint type="destinationlabel">
      <x>888</x>
@@ -763,6 +787,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>btn_attacks</sender>
+   <signal>clicked()</signal>
+   <receiver>Dialog</receiver>
+   <slot>btn_attacks_clicked()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>146</x>
+     <y>470</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>3</x>
+     <y>483</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>btn_train_set_clicked()</slot>
@@ -773,5 +813,6 @@
   <slot>on_selection_changed()</slot>
   <slot>on_accept()</slot>
   <slot>chk_folds_toggled()</slot>
+  <slot>btn_attacks_clicked()</slot>
  </slots>
 </ui>
